# RAG-research-paper-analyser

./: .env.example  .gitignore  README.md  docker-compose.yml
.claude/: launch.json  settings.local.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/: conversations.py  papers.py  query.py  router.py
backend/app/db/: session.py
backend/app/generation/: llm.py  pipeline.py  prompts.py
backend/app/ingestion/: chunker.py  parser.py  pipeline.py
backend/app/models/: __init__.py  conversation.py  paper.py
backend/app/retrieval/: dense.py  embedder.py  fusion.py  pipeline.py  reranker.py  sparse.py
backend/app/schemas/: conversation.py  paper.py  query.py
backend/tests/test_ingestion/: test_chunker.py  test_parser.py
backend/tests/test_retrieval/: test_citation_parsing.py  test_fusion.py  test_metrics.py
evaluation/: eval_runner.py  metrics.py  pyproject.toml  qa_pairs.json
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/papers/[id]/: page.tsx
frontend/src/components/: ChatPanel.tsx  CitationTag.tsx  MessageBubble.tsx  PaperList.tsx  PaperUpload.tsx  PdfViewer.tsx
frontend/src/lib/: api.ts  types.ts
scripts/: pull_model.sh  run_eval.sh
