[project]
name = "rag-backend"
version = "0.1.0"
description = "Research Paper Intelligence Engine - Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3",
    "pymupdf>=1.25",
    "sentence-transformers>=3.3",
    "rank-bm25>=0.2.2",
    "anthropic>=0.40",
    "openai>=1.50",
    "httpx>=0.28",
    "python-multipart>=0.0.18",
    "pydantic-settings>=2.6",
    "tiktoken>=0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "aiosqlite>=0.20",
]
eval = [
    "ragas>=0.2",
    "datasets>=3",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
